before_first_request メソッドを使うためにFlaskを2.2.xにダウングレード

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ packages = [{include = "line_api_use_case_flask"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-flask = "^2.3"
+flask = "~2.2"
 python-dotenv = "^1.0.0"
 line-bot-sdk = "2.4.2"
 pymongo = "^4.3.3"
+apscheduler = "^3.10.1"
 
 [build-system]
 requires = ["poetry-core"]
