--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.7"
 Flask = "~2.2"
 python-dotenv = "0.21.1"
+waitress = "^2.1.2"
 
 [tool.poetry.group.dev.dependencies]
 line-bot-sdk = "^2.4.2"
