--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.7"
 Flask = "~2.2"
 python-dotenv = "0.21.1"
 waitress = "^2.1.2"
+apscheduler = "~3.7.0"
 
 [tool.poetry.group.dev.dependencies]
 line-bot-sdk = "^2.4.2"
