--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ python-dotenv = "0.21.1"
 waitress = "^2.1.2"
 apscheduler = "~3.7.0"
 line-bot-sdk = "^3.1.0"
+pandas = "~1.1.0"
+openpyxl = "^3.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pymongo = "^4.3.3"
