--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "0.21.1"
 waitress = "^2.1.2"
 apscheduler = "~3.7.0"
 line-bot-sdk = "^3.1.0"
+pyngrok = "^7.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pymongo = "^4.3.3"
