--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 #packages = [{include = "water_server_be"}]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.11,<4"
 Flask = "~2.2"
 python-dotenv = "0.21.1"
 waitress = "^2.1.2"
