--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = ""
 authors = ["shingaryu <shingaryu@gmail.com>"]
 readme = "README.md"
 #packages = [{include = "water_server_be"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.11,<4"
